--- a/CopyPaste/CopyPaste.csproj
+++ b/CopyPaste/CopyPaste.csproj
@@ -61,6 +61,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="utils\CopyFiles.cs" />
+    <Compile Include="utils\CustomException.cs" />
     <Compile Include="utils\UIHelper.cs" />
     <Compile Include="utils\Utils.cs" />
     <Page Include="features\mainWindow\MainWindow.xaml">
